# CFO-Panel

./: README.md  dbt_project.yml  pyproject.toml  streamlit_app.py
models/marts/: mart_cfo_daily_kpis.sql  mart_channel_performance.sql  mart_order_details.sql  schema.yml
models/staging/: schema.yml  stg_ga4__events.sql
profiles/: profiles.yml.example
src/cfo_panel/: __init__.py  settings.py
src/cfo_panel/api/: app.py  schemas.py
src/cfo_panel/frontend/: __init__.py  app.py  client.py
src/cfo_panel/services/: __init__.py  bigquery_repository.py  dashboard_service.py
tests/: test_dashboard_service.py  test_settings.py
